# idk-test

./: .gitignore  README.md  idk.txt
idk-ai/src/: main.cpp
idk-atom/: README.md
idk-atom/src/: main.cpp
idk-bat/: README.md  platformio.ini
idk-bat/boards/: tenstar-esp32s3-4mb.json
idk-bat/include/: battery.h
idk-biology/: README.md
idk-blackhole/: README.md  platformio.ini
idk-chemistry/: README.md
idk-chess/: README.md
idk-clock/: README.md
idk-cyd/: README.md  platformio.ini
idk-gif/: README.md
idk-gif-s3/: README.md  platformio.ini
idk-img/: README.md
idk-ir/: README.md  platformio.ini
idk-linux/: README.md
idk-math-num/: README.md
idk-mine/: .gitignore  CMakeLists.txt  README.md  logesp32mine.txt  partition_table.csv  sdkconfig.defaults
idk-mine-esp32/: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  flash_report.txt  partition_table.csv  sdkconfig.defaults
idk-mine-esp32/main/: CMakeLists.txt  app_main.c
idk-mine-esp32/main/crypto/: scrypt_wrapper.c  scrypt_wrapper.h  sha256_opt.c  sha256_opt.h
idk-mine-esp32/main/miner/: lottery.c  lottery.h  miner_core.c  miner_core.h  protocol_adapter.c  protocol_adapter.h  target_select.c  target_select.h
idk-mine-esp32/main/net/: pool_client.c  pool_client.h  wifi_manager.c  wifi_manager.h
idk-mine-esp32/main/system/: build_info.c  config.c  config.h  flash_writer.c  flash_writer.h
idk-miner/: README.md  platformio.ini
idk-physics/: README.md  platformio.ini
idk-portal/: README.md  platformio.ini
idk-translator/: README.md  platformio.ini
idk-txt/: README.md  platformio.ini
idk-video/: README.md  partitions.csv  platformio.ini
tools/: asset_compiler.py
(+146 files in other folders)
